@@ -1,5 +1,7 @@
 15.12.0pre0
 ===========
++  Create /var/empty earlier in case an image already provides it (need it no matter what)
++  Renamed ImageGwConnect to shifterimg
 +  Updated ImageGwConnect helper application to work with changes to imagegw
    output and allow user to specify image type. Add image listing support.
 +  Created iniital README
